tests/types_first_function_statics3/types_first_function_statics3.exp
Error --------------------------------------------------------------------------------------------------------- b.js:6:2

Cannot create `Component` element because property `other` is missing in `Props` [1] but exists in props [2].
[prop-missing]

   b.js:6:2
   6| <Component other={1}/>;
       ^^^^^^^^^

References:
   a.js:7:27
   7| const Component = (props: Props): React.Node => <div />;
                                ^^^^^ [1]
   b.js:6:1
   6| <Component other={1}/>;
      ^^^^^^^^^^^^^^^^^^^^^^ [2]


Error -------------------------------------------------------------------------------------------------------- b.js:11:2

Cannot create `PolyComponent` element because property `other` is missing in `Props` [1] but exists in props [2].
[prop-missing]

   b.js:11:2
   11| <PolyComponent t={0} other={1}/>;
        ^^^^^^^^^^^^^

References:
   poly_a.js:8:30
    8| const Component = <T>(props: Props<T>): React.Node => <div />;
                                    ^^^^^^^^ [1]
   b.js:11:1
   11| <PolyComponent t={0} other={1}/>;
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [2]



Found 2 errors
